# goauld

./: Cargo.toml  LICENSE  README.md  build.rs
examples/: evil.rs  victim.rs  victim_alloc.rs
examples/dump_mem/: Cargo.toml
examples/dump_mem/src/: lib.rs
examples/frida_gadget/: frida-gadget-16.3.3-linux-x86.config  test.js  toast.js
examples/victim_ptrace/: Cargo.toml
examples/victim_ptrace/src/: main.rs
src/: error.rs  lib.rs
src/payloads/: aarch64.rs  mod.rs  x86.rs  x86_64.rs
src/proc/: class.rs  maps.rs  mem.rs  mod.rs
src/utils/: mod.rs  ptrace.rs  resolv.rs
